# Twin64

./: .gitignore  CMakeLists.txt
TestScript/: InitOperands.txt  InstructionTest.txt  StartTest.txt
Twin64-Asmtest/: main.cpp
Twin64-Instruction-Sheet/: Twin64-Instruction-Set.numbers
Twin64-Libraries/Twin64-Common/: T64-Common.h  T64-Util.cpp  T64-Util.h
Twin64-Libraries/Twin64-ConsoleIO/: T64-ConsoleIO.cpp  T64-ConsoleIO.h
Twin64-Libraries/Twin64-InlineAsm/: T64-InlineAsm.cpp  T64-InlineAsm.h  T64-InlineDisAsm.cpp
Twin64-Libraries/Twin64-Memory/: T64-Memory.cpp  T64-Memory.h
Twin64-Libraries/Twin64-Processor/: CMakeLists.txt  T64-Cache.cpp  T64-Cpu.cpp  T64-Processor.cpp  T64-Processor.h  T64-TLB.cpp
Twin64-Libraries/Twin64-System/: CMakeLists.txt  T64-Module.cpp  T64-ProcThreadModule.cpp  T64-System.cpp  T64-System.h  T64-ThreadModule.cpp
Twin64-Libraries/Twin64-Tlb/: CMakeLists.txt  T64-Tlb.cpp  T64-Tlb.h
Twin64-SPL/: Grammar.md
Twin64-Simulator/: T64-SimConfig.cpp  T64-SimDeclarations.h  T64-SimEnvVars.cpp  T64-SimExprEvaluator.cpp  T64-SimExprFunctions.cpp  T64-SimTables.h  T64-SimTokenizer.cpp  T64-SimVersion.h  T64-SimWinBaseClasses.cpp  T64-SimWinClasses.cpp  T64-SimWinCmd.cpp  T64-SimWinDisplay.cpp  T64-SimWinElfFileCmd.cpp  main.cpp
Twin64-Tidbits/: T64-Cache.cpp
config/: T64ConfigFile
log/: T64LogFile
